test_scripts/errors/dict_missing_key.shm
let d = dict();
d["missing"];
